# OneSync

./: .gitignore  README.md  architecture.md  go.mod  review.md
backend/: server.go  server_test.go  web_assets_test.go  web_behavior_test.go
backend/web/: app.css  app.js  index.html
clients/win7-qt/: CMakeLists.txt  OneSyncWin7.pro  README.md  build-win7.sh  package-win7.cmd
clients/win7-qt/docs/: protocol-notes.md
clients/win7-qt/src/: Endpoint.cpp  Endpoint.h  FileReceiver.cpp  FileReceiver.h  IgnoreMatcher.cpp  IgnoreMatcher.h  MainWindow.cpp  MainWindow.h  PeerIdentity.cpp  PeerIdentity.h  SnapshotScanner.cpp  SnapshotScanner.h  SourceConnector.cpp  SourceConnector.h  SyncLink.cpp  SyncLink.h  SyncProtocol.cpp  SyncProtocol.h  TargetConnector.cpp  TargetConnector.h  main.cpp
clients/win7-qt/tools/: make_icon_res.py
cmd/onesync/: main.go  main_test.go  rsrc_windows_amd64.syso
cmd/onesync-cert/: main.go
cmd/relay/: access_keys.go  access_keys_test.go  admin.go  admin_test.go  main.go  main_test.go
internal/auth/: credentials.go  credentials_test.go  credentials_unix.go  credentials_windows.go  link.go  link_test.go
internal/certutil/: generate.go  generate_test.go
internal/client/: connection.go  factory.go  factory_test.go
internal/config/: paths.go  paths_test.go
internal/diagnostic/: checker.go  checker_test.go
internal/filewatch/: periodic.go  periodic_test.go
internal/logger/: logger.go
internal/netutil/: endpoints.go  endpoints_test.go
internal/network/: auth.go  auth_test.go  frame.go  frame_test.go  session.go  session_test.go  tls.go  tls_test.go
internal/platform/: tray_other.go  (+5 more)
packaging/: acceptance-report.md  build-acceptance.sh  package-acceptance.sh  preflight-checklist.md  quickstart.md
(+62 files in other folders)
